<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Yoga OM App</string>
    <string name="title_login">Iniciar Sesión</string>
    <string name="title_register">Crear Cuenta</string>
    <string name="title_forgot_password">Recuperar Clave</string>

    <string name="hint_email">Correo Electrónico</string>
    <string name="hint_password">Contraseña</string>
    <string name="hint_confirm_password">Confirmar Contraseña</string>

    <string name="btn_login">INICIAR SESIÓN</string>
    <string name="btn_register">REGISTRARME</string>
    <string name="btn_recover">ENVIAR ENLACE DE RECUPERACIÓN</string>

    <string name="link_register">¿No tienes cuenta? Regístrate aquí.</string>
    <string name="link_forgot_password">¿Olvidaste tu contraseña?</string>
    <string name="link_back_to_login">Volver a Iniciar Sesión</string>

    <!-- Mensajes de simulación (AlertDialog) -->
    <string name="dialog_success_title">Éxito</string>
    <string name="dialog_login_message">Simulación: ¡Inicio de sesión exitoso! (ID de usuario simulado: 101)</string>
    <string name="dialog_register_message">Simulación: Cuenta creada. Por favor, revisa tu correo para verificar.</string>
    <string name="dialog_recover_message">Simulación: Se ha enviado un enlace de recuperación a tu correo.</string>
    <string name="dialog_ok">Aceptar</string>
    <string name="dialog_delete_title">Confirmar Eliminación</string>
    <string name="dialog_delete_message">¿Estás seguro de que quieres eliminar esta postura?</string>
    <string name="dialog_cancel">Cancelar</string>
    <string name="dialog_delete">Eliminar</string>


    <!-- Splash Screen -->
    <string name="splash_welcome">NAMASTE</string>
    <string name="logo_description">Logo de la aplicación</string>
    <string name="btn_back">Volver</string>

    <!-- Add Pose Screen -->
    <string name="add_pose">Añadir nueva postura</string>
    <string name="hint_pose_title">Título de la postura</string>
    <string name="hint_pose_description">Descripción de la postura</string>
    <string name="select_image">Seleccionar Imagen</string>
    <string name="save_pose">GUARDAR POSTURA</string>
    <string name="logout">Cerrar Sesión</string>
    <string name="hint_image_url">URL de la imagen</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_delete">Eliminar</string>

</resources>
