<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="32dp"
    tools:context=".ForgotPasswordActivity">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_forgot_password"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="64dp" />

    <TextView
        android:id="@+id/tv_instructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Ingresa tu correo para recibir un enlace de recuperación."
        android:textSize="16sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title"
        android:layout_marginTop="16dp" />

    <EditText
        android:id="@+id/et_email_recover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_instructions"
        android:layout_marginTop="32dp" />

    <Button
        android:id="@+id/btn_recover"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/btn_recover"
        android:backgroundTint="@color/colorAccent"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email_recover"
        android:layout_marginTop="32dp" />

    <TextView
        android:id="@+id/link_back_to_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/link_back_to_login"
        android:textColor="@color/colorPrimaryDark"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginBottom="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
